home a tags css + header

--- a/home.html
+++ b/home.html
@@ -58,26 +58,61 @@
         </header>
         <main>
             <section>
+                <div class="home-top">
+                    <a tabindex="0" href="home.html">
+                        <img
+                            class="home-logo"
+                            src="imgs/optimat-logo.png"
+                            alt="Optimat logo"
+                        />
+                    </a>
+                    <h1 tabindex="0">Reduce food waste!</h1>
+                    <h1 tabindex="0">Save money!</h1>
+                    <h1 tabindex="0">Save the planet!</h1>
+                </div>
+            </section>
+            <section>
                 <div class="home-text">
                     <h1 tabindex="0">Problem</h1>
                     <p tabindex="0">
-                        Food loss and waste have become an issue of great public concern. Between one-third and one-half of all produced food is wasted, lost or left uneaten. This practise is not only morally irresponsible, but it is also unsustainable from a world resource and environmental perspective. We all have a part to plat in reducing food loss and waste, not only for the sake of the food but for the resources that go into it.
+                        Food loss and waste have become an issue of great public
+                        concern. Between one-third and one-half of all produced
+                        food is wasted, lost or left uneaten. This practise is
+                        not only morally irresponsible, but it is also
+                        unsustainable from a world resource and environmental
+                        perspective. We all have a part to plat in reducing food
+                        loss and waste, not only for the sake of the food but
+                        for the resources that go into it.
                     </p>
-                    <a tabindex="0" href="problem.html">Read more</a>
+                    <a tabindex="0" class="home-link" href="problem.html">Read more</a>
                 </div>
                 <div class="home-text">
                     <h1 tabindex="0">Solution</h1>
                     <p tabindex="0">
-                        We have decided to create an app that focuses on reducing food waste in homes around the world. Even though this problem spans over multiple areas, from production to personal consumption, we believe that combatting this problem should start at home. To help solve this problem we have created an app called Optimat. We hope that bringing awareness to the problem will lead to less overall food loss and waste.
+                        We have decided to create an app that focuses on
+                        reducing food waste in homes around the world. Even
+                        though this problem spans over multiple areas, from
+                        production to personal consumption, we believe that
+                        combatting this problem should start at home. To help
+                        solve this problem we have created an app called
+                        Optimat. We hope that bringing awareness to the problem
+                        will lead to less overall food loss and waste.
                     </p>
-                    <a tabindex="0" href="solution.html">Read more</a>
+                    <a tabindex="0" class="home-link" href="solution.html">Read more</a>
                 </div>
                 <div class="home-text">
                     <h1 tabindex="0">Prototype</h1>
                     <p tabindex="0">
-                        We have created an app that helps you keep track of groceries that you buy. The app lets you scan groceries. Scanning the groceries adds then to an inventory, here products and expiry dates are displayed. The app will also display viable recipes based on which groceries you have stored in your home. It also lets you create a schedule so that you can plan what meals you are going to have, ahead of time. 
+                        We have created an app that helps you keep track of
+                        groceries that you buy. The app lets you scan groceries.
+                        Scanning the groceries adds then to an inventory, here
+                        products and expiry dates are displayed. The app will
+                        also display viable recipes based on which groceries you
+                        have stored in your home. It also lets you create a
+                        schedule so that you can plan what meals you are going
+                        to have, ahead of time.
                     </p>
-                    <a tabindex="0" href="prototype.html">Read more</a>
+                    <a tabindex="0"  class="home-link" href="prototype.html">Read more</a>
                 </div>
             </section>
         </main>
