--- a/prototype.html
+++ b/prototype.html
@@ -77,7 +77,7 @@
                 </div>
             </section>
         
-            <section>
+            <section class="prototype-section">
                 <div class="prototype-img">
                     <img
                         class="prototype-img"
@@ -103,7 +103,7 @@
                     </p>
                 </div>
             </section>
-            <section>
+            <section class="prototype-section">
                 <div class="prototype-img">
                     <img
                         tabindex="0"
@@ -123,7 +123,7 @@
                     </p>
                 </div>
             </section>
-            <section>
+            <section class="prototype-section">
                 <div class="prototype-img">
                     <img
                         tabindex="0"
@@ -143,7 +143,7 @@
                     </p>
                 </div>
             </section>
-            <section>
+            <section class="prototype-section">
                 <div class="prototype-img">
                     <img
                         tabindex="0"
@@ -165,7 +165,7 @@
                     </p>
                 </div>
             </section>
-            <section>
+            <section class="prototype-section">
                 <div class="prototype-img">
                     <img
                         tabindex="0"
