gjennomgang av alt tags + tabindex

--- a/prototype.html
+++ b/prototype.html
@@ -83,7 +83,7 @@
                         class="prototype-img"
                         src="imgs/prototype/Login.png"
                         tabindex="0"
-                        alt="Optimat logg inn screen"
+                        alt="Optimat login screen"
                     />
                 </div>
                 <div class="prototype-text">
@@ -110,7 +110,7 @@
                         class="prototype-img"
                         src="imgs/prototype/Addnew.png"
                         tabindex="0"
-                        alt="Barcode scanner"
+                        alt="Image of our barcode scanner"
                     />
                 </div>
                 <div class="prototype-text">
@@ -150,7 +150,7 @@
                         class="prototype-img"
                         src="imgs/prototype/Recipies.png"
                         tabindex="0"
-                        alt="List of recipes"
+                        alt="Image of our app screen with a list of recipes."
                     />
                 </div>
                 <div class="prototype-text">
@@ -172,7 +172,7 @@
                         class="prototype-img"
                         src="imgs/prototype/Schedule.png"
                         tabindex="0"
-                        alt="List of planned meals for the week"
+                        alt="Image of our app screen showing our planned meals for the week."
                     />
                 </div>
                 <div class="prototype-text">
