--- a/solution.html
+++ b/solution.html
@@ -59,7 +59,7 @@
         <main>
             <section>
                 <div>
-                    <img class="solution-header" src="./imgs/general-header-gradient-2.png" alt="">
+                    <img class="solution-header" src="./imgs/general-header-gradient-2.png" alt="Header image showing our app, and the words: Better word, better food and Optimat">
                 </div>
             </section>
 
