--- a/sources.html
+++ b/sources.html
@@ -69,11 +69,29 @@
                 <h2 tabindex="0">Problem</h2>
                 <ul>
                     <li>
-                        <p tabindex="0">Food and Agriculture Organization of the United Nations. (år). Food Loss and Food Waste. Retrieved 01.12.2019 from <a href="http://www.fao.org/food-loss-and-food-waste/en/">http://www.fao.org/food-loss-and-food-waste/en/</a></p>
+                        <p tabindex="0">
+                            Food and Agriculture Organization of the United
+                            Nations. (år). Food Loss and Food Waste. Retrieved
+                            01.12.2019 from
+                            <a
+                                href="http://www.fao.org/food-loss-and-food-waste/en/"
+                                >http://www.fao.org/food-loss-and-food-waste/en/</a
+                            >
+                        </p>
                     </li>
-                    <li>Food waste. (n.d.) Wikipedia. Retrieved 01.12.2019 from <a href="https://en.wikipedia.org/wiki/Food_waste">https://en.wikipedia.org/wiki/Food_waste</a></li>
                     <li>
-                        <p tabindex="0">Woman waring pink knit top opening refrigerator</p>
+                        <p tabindex="0">
+                            Food waste. (n.d.) Wikipedia. Retrieved 01.12.2019
+                            from
+                        </p>
+                        <a href="https://en.wikipedia.org/wiki/Food_waste"
+                            >https://en.wikipedia.org/wiki/Food_waste</a
+                        >
+                    </li>
+                    <li>
+                        <p tabindex="0">
+                            Woman waring pink knit top opening refrigerator
+                        </p>
                         <a
                             href="https://www.pexels.com/photo/woman-wearing-pink-knit-top-opening-refrigerator-1458687/"
                             >https://www.pexels.com/photo/woman-wearing-pink-knit-top-opening-refrigerator-1458687/</a
@@ -87,7 +105,9 @@
                         >
                     </li>
                     <li>
-                        <p tabindex="0">Man and woman discussing and sharing ideas</p>
+                        <p tabindex="0">
+                            Man and woman discussing and sharing ideas
+                        </p>
                         <a
                             href="https://www.pexels.com/photo/man-and-woman-discussing-and-sharing-ideas-2977565/"
                             >https://www.pexels.com/photo/man-and-woman-discussing-and-sharing-ideas-2977565/</a
@@ -102,7 +122,9 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">SSB statisic graph (trash from households)</p>
+                        <p tabindex="0">
+                            SSB statisic graph (trash from households)
+                        </p>
                         <a
                             href="https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21"
                             >https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21</a
@@ -127,17 +149,39 @@
                 <ul>
                     <li>
                         <p tabindex="0">Pumpkin waffle recipe</p>
-                        <a href="https://www.savorynothings.com/simple-pumpkin-waffles/">https://www.savorynothings.com/simple-pumpkin-waffles/</a>
-                  </li>
-                  <li>
-                        <a target="_blank" href="https://icons8.com/">Fridge icon</a> icon by <a target="_blank" href="https://icons8.com/%22%3EIcons8">Icon8</a>
+                        <a
+                            href="https://www.savorynothings.com/simple-pumpkin-waffles/"
+                            >https://www.savorynothings.com/simple-pumpkin-waffles/</a
+                        >
                     </li>
                     <li>
-                        <a target="_blank" href="https://icons8.com/">Calendar icon</a> icon by <a target="_blank" href="https://icons8.com/%22%3EIcons8">Icon8</a>
+                        <a target="_blank" href="https://icons8.com/"
+                            >Fridge icon</a
+                        >
+                        icon by
+                        <a
+                            target="_blank"
+                            href="https://icons8.com/%22%3EIcons8"
+                            >Icon8</a
+                        >
                     </li>
                     <li>
-                        <p>Barcode-barcode-scanner</p>
-                        <a href="https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png">https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png</a>
+                        <a target="_blank" href="https://icons8.com/"
+                            >Calendar icon</a
+                        >
+                        icon by
+                        <a
+                            target="_blank"
+                            href="https://icons8.com/%22%3EIcons8"
+                            >Icon8</a
+                        >
+                    </li>
+                    <li>
+                        <p taibindex="0">Barcode-barcode-scanner</p>
+                        <a
+                            href="https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png"
+                            >https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png</a
+                        >
                     </li>
                 </ul>
             </div>
