--- a/problem.html
+++ b/problem.html
@@ -69,7 +69,7 @@
                         the smell of a rotten fruit. The uneasy feeling of
                         throwing out food that could have been eaten, just if
                         you had taken the time to plan. Or use it in a recipe.
-                    </p>
+                    </p tabindex="0">
                         <p tabindex="0">
                         All these feelings and emotions all relate to the
                         findings of recent research that show that people
@@ -206,7 +206,7 @@
                         tabindex="0"
                         class="problem-solution-img"
                         src="imgs/problem/graph-trash.jpeg"
-                        alt="graph"
+                        alt="Graph of food consumption in Norway."
                     />
                 </div>
             </section>
