Responsive header solution

--- a/solution.html
+++ b/solution.html
@@ -57,9 +57,8 @@
             </nav>
         </header>
         <main>
-            <section>
-                <div>
-                    <img class="solution-header" src="./imgs/general-header-gradient-2.png" alt="">
+            <section class="solution-header-section">
+                <div class="solution-header-image">
                 </div>
             </section>
 
@@ -101,12 +100,12 @@
             </section>
             <section class="solution-padding">
                 <div>
-                    <img
+                    <!-- <img
                         tabindex="0"
                         class="solution-img"
                         src="imgs/solution/barcode-cellphone.jpg"
                         alt="QR code"
-                    />
+                    /> -->
                 </div>
             </section>
             <section class="solution-padding">
