fikset solution img + solution header

--- a/solution.html
+++ b/solution.html
@@ -99,12 +99,12 @@
             </section>
             <section class="solution-padding">
                 <div>
-                    <!-- <img
+                    <img
                         tabindex="0"
                         class="solution-img"
                         src="imgs/solution/barcode-cellphone.jpg"
                         alt="QR code"
-                    /> -->
+                    />
                 </div>
             </section>
             <section class="solution-padding">
