ny tekst problem siden (graph)

--- a/problem.html
+++ b/problem.html
@@ -193,11 +193,20 @@
                         Optimat can help with all of the above!
                     </h2>
                     <p tabindex="0">
+                            We have spotted a really grave trend in the figure to the right. We have an increased consumption but even more increase in trash. That means we buy more than we eat. A very disturbing trend. We aim to fix it.
+                    </p>
+                    <p tabindex="0">
                         By helping you manage your food usage and dates of
                         expiry, you can help support the UN goals by making
-                        micro changes to your habits. Over time, this can have a
-                        big impact on both your wallet, the environment and also
-                        the society. Less waste is always better!
+                        micro changes to your habits. 
+                    </p>
+                    <p tabindex="0">
+                            Over time, this can have a
+                            big impact on both your wallet, the environment and also
+                            the society. Less waste is always better!
+                    </p>
+                    <p tabindex="0">
+                            Less waste is always better!
                     </p>
                 </div>
 
