--- a/prototype.html
+++ b/prototype.html
@@ -103,6 +103,7 @@
                     </p>
                 </div>
             </section>
+            <div class="divider"></div>
             <section class="prototype-section">
                 <div class="prototype-img">
                     <img
@@ -123,6 +124,7 @@
                     </p>
                 </div>
             </section>
+            <div class="divider"></div>
             <section class="prototype-section">
                 <div class="prototype-img">
                     <img
@@ -143,6 +145,7 @@
                     </p>
                 </div>
             </section>
+            <div class="divider"></div>
             <section class="prototype-section">
                 <div class="prototype-img">
                     <img
@@ -165,6 +168,7 @@
                     </p>
                 </div>
             </section>
+            <div class="divider"></div>
             <section class="prototype-section">
                 <div class="prototype-img">
                     <img
