--- a/home.html
+++ b/home.html
@@ -89,7 +89,7 @@
                 <div class="home-text">
                     <h1 tabindex="0">Solution</h1>
                     <p tabindex="0">
-                        We have decided to create an app that focuses on
+                        We have created an app that focuses on
                         reducing food waste in homes around the world. Even
                         though this problem spans over multiple areas, from
                         production to personal consumption, we believe that
