--- a/sources.html
+++ b/sources.html
@@ -188,7 +188,7 @@
                     </li>
                     
                     <li>
-                        <p tabindex="0">God-Morgen-egg-Picture</p>
+                        <p tabindex="0">God-Morgen-egg-Picture. Retrieved from</p>
                         <a
                             href="http://www.prior.no/produktkatalog/egg/egg-12-ml-god-morgen-frittg-12-stk/"
                             >http://www.prior.no/produktkatalog/egg/egg-12-ml-god-morgen-frittg-12-stk/</a
@@ -196,7 +196,7 @@
                     </li>
                     
                     <li>
-                        <p tabindex="0">Tinemelk-Lett-Picture</p>
+                        <p tabindex="0">Tinemelk-Lett-Picture. Retrieved from</p>
                         <a
                             href="https://www.matoppskrift.no/bilder/bilder_1000/19972.jpg"
                             >https://www.matoppskrift.no/bilder/bilder_1000/19972.jpg</a
@@ -204,7 +204,7 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">Aspargus-Beans-Picture</p>
+                        <p tabindex="0">Aspargus-Beans-Picture. Retrieved from</p>
                         <a
                             href="https://www.bama.no/sesongkalender/produkter/aspargesbonner/"
                             >https://www.bama.no/sesongkalender/produkter/aspargesbonner/</a
@@ -212,7 +212,7 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">Chicken-Fillet-Picture</p>
+                        <p tabindex="0">Chicken-Fillet-Picture. Retrieved from</p>
                         <a
                             href="http://www.prior.no/produktkatalog/kylling/kg-kylling-larfilet-600g/"
                             >http://www.prior.no/produktkatalog/kylling/kg-kylling-larfilet-600g/</a
