format + missing lang html

--- a/home.html
+++ b/home.html
@@ -9,13 +9,11 @@
     <body>
         <header>
             <div>
-                <a href="home.html">
-                    <img
-                        class="logo"
-                        src="imgs/optimat-logo.png"
-                        alt="Optimat logo"
-                    />
-                </a>
+                <img
+                    class="logo"
+                    src="imgs/optimat-logo.png"
+                    alt="Optimat logo"
+                />
             </div>
             <nav class="nav-desktop">
                 <ul>
@@ -84,7 +82,9 @@
                         loss and waste, not only for the sake of the food but
                         for the resources that go into it.
                     </p>
-                    <a tabindex="0" class="home-link" href="problem.html">Read more</a>
+                    <a tabindex="0" class="home-link" href="problem.html"
+                        >Read more</a
+                    >
                 </div>
                 <div class="home-text">
                     <h1 tabindex="0">Solution</h1>
@@ -98,7 +98,9 @@
                         Optimat. We hope that bringing awareness to the problem
                         will lead to less overall food loss and waste.
                     </p>
-                    <a tabindex="0" class="home-link" href="solution.html">Read more</a>
+                    <a tabindex="0" class="home-link" href="solution.html"
+                        >Read more</a
+                    >
                 </div>
                 <div class="home-text">
                     <h1 tabindex="0">Prototype</h1>
@@ -112,7 +114,9 @@
                         schedule so that you can plan what meals you are going
                         to have, ahead of time.
                     </p>
-                    <a tabindex="0"  class="home-link" href="prototype.html">Read more</a>
+                    <a tabindex="0" class="home-link" href="prototype.html"
+                        >Read more</a
+                    >
                 </div>
             </section>
         </main>
