--- a/problem.html
+++ b/problem.html
@@ -69,8 +69,8 @@
                         the smell of a rotten fruit. The uneasy feeling of
                         throwing out food that could have been eaten, just if
                         you had taken the time to plan. Or use it in a recipe.
-                    </p tabindex="0">
-                        <p tabindex="0">
+                    </p>
+                    <p tabindex="0">
                         All these feelings and emotions all relate to the
                         findings of recent research that show that people
                         between the ages of 20 and 30, recent mothers and people
@@ -193,20 +193,23 @@
                         Optimat can help with all of the above!
                     </h2>
                     <p tabindex="0">
-                            We have spotted a really grave trend in the figure to the right. We have an increased consumption but even more increase in trash. That means we buy more than we eat. A very disturbing trend. We aim to fix it.
+                        We have spotted a really grave trend in the figure to
+                        the right. We have an increased consumption but even
+                        more increase in trash. That means we buy more than we
+                        eat. A very disturbing trend. We aim to fix it.
                     </p>
                     <p tabindex="0">
                         By helping you manage your food usage and dates of
                         expiry, you can help support the UN goals by making
-                        micro changes to your habits. 
+                        micro changes to your habits.
                     </p>
                     <p tabindex="0">
-                            Over time, this can have a
-                            big impact on both your wallet, the environment and also
-                            the society. Less waste is always better!
+                        Over time, this can have a big impact on both your
+                        wallet, the environment and also the society. Less waste
+                        is always better!
                     </p>
                     <p tabindex="0">
-                            Less waste is always better!
+                        Less waste is always better!
                     </p>
                 </div>
 
