--- a/prototype.html
+++ b/prototype.html
@@ -76,7 +76,7 @@
                     </p>
                 </div>
             </section>
-        
+
             <section class="prototype-section">
                 <div class="prototype-img">
                     <img
@@ -117,10 +117,13 @@
                 <div class="prototype-text">
                     <h2 tabindex="0">Add a new product</h2>
                     <p tabindex="0">
-                        On this page you can add a new product to your inventory. It is very simple. All you have to do
-                        is scan the barcode of the product with the camera on your phone. Automatically after this all
-                        the information will be recieved automatically. Such as name of the item, nutrional content like
-                        calories etc and the expiration date. 
+                        On this page you can add a new product to your
+                        inventory. It is very simple. All you have to do is scan
+                        the barcode of the product with the camera on your
+                        phone. Automatically after this all the information will
+                        be recieved automatically. Such as name of the item,
+                        nutrional content like calories etc and the expiration
+                        date.
                     </p>
                 </div>
             </section>
