fjernet a tag på logo header

--- a/home.html
+++ b/home.html
@@ -9,11 +9,12 @@
     <body>
         <header>
             <div>
-                <img
-                    class="logo"
-                    src="imgs/optimat-logo.png"
-                    alt="Optimat logo"
-                />
+                <a href="home.html"
+                    ><img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                /></a>
             </div>
             <nav class="nav-desktop">
                 <ul>
@@ -57,13 +58,13 @@
         <main>
             <section>
                 <div class="home-top">
-                    <a tabindex="0" href="home.html">
-                        <img
-                            class="home-logo"
-                            src="imgs/optimat-logo.png"
-                            alt="Optimat logo"
-                        />
-                    </a>
+                    <img
+                        tabindex="0"
+                        class="home-logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+
                     <h1 tabindex="0">Reduce food waste!</h1>
                     <h1 tabindex="0">Save money!</h1>
                     <h1 tabindex="0">Save the planet!</h1>
@@ -89,14 +90,14 @@
                 <div class="home-text">
                     <h1 tabindex="0">Solution</h1>
                     <p tabindex="0">
-                        We have created an app that focuses on
-                        reducing food waste in homes around the world. Even
-                        though this problem spans over multiple areas, from
-                        production to personal consumption, we believe that
-                        combatting this problem should start at home. To help
-                        solve this problem we have created an app called
-                        Optimat. We hope that bringing awareness to the problem
-                        will lead to less overall food loss and waste.
+                        We have created an app that focuses on reducing food
+                        waste in homes around the world. Even though this
+                        problem spans over multiple areas, from production to
+                        personal consumption, we believe that combatting this
+                        problem should start at home. To help solve this problem
+                        we have created an app called Optimat. We hope that
+                        bringing awareness to the problem will lead to less
+                        overall food loss and waste.
                     </p>
                     <a tabindex="0" class="home-link" href="solution.html"
                         >Read more</a
