--- a/sources.html
+++ b/sources.html
@@ -59,13 +59,6 @@
         </header>
         <main>
             <div class="sources">
-                <h2 tabindex="0">Home</h2>
-                <ul>
-                    <li>
-                        <a href=""></a>
-                    </li>
-                </ul>
-
                 <h2 tabindex="0">Problem</h2>
                 <ul>
                     <li>
@@ -90,7 +83,8 @@
                     </li>
                     <li>
                         <p tabindex="0">
-                            Shevtsova, D. (Photograph) (2018) Woman waring pink knit top opening refrigerator. Retriebved from
+                            Shevtsova, D. (Photograph) (2018) Woman waring pink
+                            knit top opening refrigerator. Retriebved from
                         </p>
                         <a
                             href="https://www.pexels.com/photo/woman-wearing-pink-knit-top-opening-refrigerator-1458687/"
@@ -98,7 +92,10 @@
                         >
                     </li>
                     <li>
-                        <p tabindex="0">Carter, J. (Photograph) (2017) Couple Kissing Baby While Carry. Retrieved from</p>
+                        <p tabindex="0">
+                            Carter, J. (Photograph) (2017) Couple Kissing Baby
+                            While Carry. Retrieved from
+                        </p>
                         <a
                             href="https://www.pexels.com/photo/affection-baby-baby-girl-beautiful-377058/"
                             >https://www.pexels.com/photo/affection-baby-baby-girl-beautiful-377058/</a
@@ -106,7 +103,8 @@
                     </li>
                     <li>
                         <p tabindex="0">
-                            The Coach Space. (Photograph) (2019) Man and woman discussing and sharing ideas. Retrieved from
+                            The Coach Space. (Photograph) (2019) Man and woman
+                            discussing and sharing ideas. Retrieved from
                         </p>
                         <a
                             href="https://www.pexels.com/photo/man-and-woman-discussing-and-sharing-ideas-2977565/"
@@ -114,7 +112,10 @@
                         >
                     </li>
                     <li>
-                        <p tabindex="0">Jopwell. (Photograph) (2019) Group of people sitting inside room. Retrieved from</p>
+                        <p tabindex="0">
+                            Jopwell. (Photograph) (2019) Group of people sitting
+                            inside room. Retrieved from
+                        </p>
                         <a
                             href="https://www.pexels.com/photo/group-of-people-sitting-inside-room-2422294/"
                             >https://www.pexels.com/photo/group-of-people-sitting-inside-room-2422294/</a
@@ -123,7 +124,8 @@
 
                     <li>
                         <p tabindex="0">
-                            Statistisk Sentralbyrå, Trash from households statistics (2016). Retrieved 01.12.2019 from
+                            Statistisk Sentralbyrå, Trash from households
+                            statistics (2016). Retrieved 01.12.2019 from
                         </p>
                         <a
                             href="https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21"
@@ -135,7 +137,10 @@
                 <h2 tabindex="0">Solution</h2>
                 <ul>
                     <li>
-                        <p tabindex="0">Pixabay (Photograph) (n.d) Barcode cellphone close up. Retrieved from</p>
+                        <p tabindex="0">
+                            Pixabay (Photograph) (n.d) Barcode cellphone close
+                            up. Retrieved from
+                        </p>
                         <a
                             href="https://www.pexels.com/photo/barcode-cellphone-close-up-coded-278430/"
                             >https://www.pexels.com/photo/barcode-cellphone-close-up-coded-278430/</a
@@ -148,7 +153,10 @@
                 <h2 tabindex="0">Prototype</h2>
                 <ul>
                     <li>
-                        <p tabindex="0">Savory Nothings, Pumpkin waffle recipe (Nora Rusev) (2019). Retrieved 01.12.2019 from</p>
+                        <p tabindex="0">
+                            Savory Nothings, Pumpkin waffle recipe (Nora Rusev)
+                            (2019). Retrieved 01.12.2019 from
+                        </p>
                         <a
                             href="https://www.savorynothings.com/simple-pumpkin-waffles/"
                             >https://www.savorynothings.com/simple-pumpkin-waffles/</a
@@ -180,7 +188,9 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">Barcode-barcode-scanner. Retrieved from</p>
+                        <p tabindex="0">
+                            Barcode-barcode-scanner. Retrieved from
+                        </p>
                         <a
                             href="https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png"
                             >https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png</a
@@ -188,7 +198,9 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">God-Morgen-egg-Picture. Retrieved from</p>
+                        <p tabindex="0">
+                            God-Morgen-egg-Picture. Retrieved from
+                        </p>
                         <a
                             href="http://www.prior.no/produktkatalog/egg/egg-12-ml-god-morgen-frittg-12-stk/"
                             >http://www.prior.no/produktkatalog/egg/egg-12-ml-god-morgen-frittg-12-stk/</a
@@ -196,7 +208,9 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">Tinemelk-Lett-Picture. Retrieved from</p>
+                        <p tabindex="0">
+                            Tinemelk-Lett-Picture. Retrieved from
+                        </p>
                         <a
                             href="https://www.matoppskrift.no/bilder/bilder_1000/19972.jpg"
                             >https://www.matoppskrift.no/bilder/bilder_1000/19972.jpg</a
@@ -204,7 +218,9 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">Aspargus-Beans-Picture. Retrieved from</p>
+                        <p tabindex="0">
+                            Aspargus-Beans-Picture. Retrieved from
+                        </p>
                         <a
                             href="https://www.bama.no/sesongkalender/produkter/aspargesbonner/"
                             >https://www.bama.no/sesongkalender/produkter/aspargesbonner/</a
@@ -212,7 +228,9 @@
                     </li>
 
                     <li>
-                        <p tabindex="0">Chicken-Fillet-Picture. Retrieved from</p>
+                        <p tabindex="0">
+                            Chicken-Fillet-Picture. Retrieved from
+                        </p>
                         <a
                             href="http://www.prior.no/produktkatalog/kylling/kg-kylling-larfilet-600g/"
                             >http://www.prior.no/produktkatalog/kylling/kg-kylling-larfilet-600g/</a
