--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
                         food is wasted, lost or left uneaten. This practise is
                         not only morally irresponsible, but it is also
                         unsustainable from a world resource and environmental
-                        perspective. We all have a part to plat in reducing food
+                        perspective. We all have a part to play in reducing food
                         loss and waste, not only for the sake of the food but
                         for the resources that go into it.
                     </p>
