--- a/solution.html
+++ b/solution.html
@@ -109,37 +109,18 @@
             </section>
             <section class="solution-padding">
                 <div class="solution-text">
-                    <h2 tabindex="0">Organize your fridge</h2>
+                    <h2 tabindex="0">Save time and money</h2>
                     <p tabindex="0">
-                        Take a picture of your fridge to instantly get advice on
-                        how you can organize it - using simple principles such
-                        as First in First out, we make it easer to stay
-                        organized.
+                        Save time and money by planing your meals. 
+                        Discover new and exiting recepies and reuses your 
+                        leftover ingredients.
                     </p>
                 </div>
                 <div class="solution-text">
                     <h2 tabindex="0">Get nutritional advice</h2>
                     <p tabindex="0">
-                        We integrate with apple HealtKit to combine your
-                        consumption data with your health data - over time, you
-                        can track how food impacts your health.
-                    </p>
-                </div>
-            </section>
-            <section class="solution-padding">
-                <div class="solution-text">
-                    <h2 tabindex="0">Kitchen matching!</h2>
-                    <p tabindex="0">
-                        You have some foods that miss some foods - we suggest
-                        some of your friedns that you can meet to cook together
-                        with, since we know their fridge, we know what they
-                        have.
-                    </p>
-                </div>
-                <div class="solution-text">
-                    <h2 tabindex="0">Social !</h2>
-                    <p tabindex="0">
-                        Compete with your friends, with our scoreboard.
+                        View callories, fat, viatamins, sugar and salt levels 
+                        for the products you buy.  
                     </p>
                 </div>
             </section>
